# jjpaulo2.dev.br

./: CNAME  README.md
backend/: pyproject.toml
backend/links/: admin.py  models.py
backend/links/migrations/: 0001_initial.py
backend/links/templates/: redirect-button.html
backend/website/: settings.py
