[tool.poetry]
name = "jjpaulo2.dev.br"
version = "0.1.0"
description = "Backend from my personal website. An agregator of some many tools that I can use to work and many other things."
authors = ["João Paulo Carvalho <joaopaulo.carvalho@br.experian.com>"]
license = "MIT license"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
django-fontawesome-5 = "^1.0.18"
djangorestframework = "^3.14.0"
django-jazzmin = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
